Fix links not wrapping in right column

--- a/src/pages/main/components/right/RightColumnInfo.scss
+++ b/src/pages/main/components/right/RightColumnInfo.scss
@@ -44,6 +44,7 @@
         line-height: 1.4rem;
         margin-bottom: 0;
         font-weight: 400;
+        word-break: break-all;
       }
 
       a.title {
